fix(website): fix code splitting

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -16,7 +16,9 @@
         "composite": false,
         "paths": {
             "*": ["node_modules/@types/*", "*"]
-        }
+        },
+        "module": "esnext",
+        "moduleResolution": "node"
     },
     "include": ["./ts/**/*"]
 }
